--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.min.css">
     <script type="text/javascript" src="js/main.js"></script>
   <body>
-    <nav id="home" class="navbar">
+    <nav id="home" class="navbar" onmouseover="showNav();" onmouseout="hideNav();">
 			<div id="navbar__nav" class="nav-bar">
   				<ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
@@ -24,8 +24,10 @@
   					<li class="nav-item" onclick="showContactForm();"><a class="nav-link" href="#contact">Contact</a></li>
   				</ul>
 			</div>
-      <i id="bar" class="fa-solid fa-minus" onmouseover="showNav();" onmouseout="hideNav();"></i>
-		</nav>
+      <div id="bar-div">
+        <i id="bar" class="fa-solid fa-minus"></i>
+      </div>
+    </nav>
     <div class="hero">
       <div class="hero__logo">
         <img id="hero-logo" src="images/logo_outerheaven.svg" alt="Outer Heaven logo">
